# learn-programming

./: .gitignore  README.md  SETUP.md  pyproject.toml
src/learn_python/: __init__.py  __main__.py  days_1_10.py
tests/: __init__.py  test_comprehensive.py  test_day1.py  test_day10.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
